Update process request annotations
